se modifican estilos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row d-flex justify-content-center">
             <div class="col-lg-offset-1 col-lg-6">
                 <input type="text" class="form-control" id="gif-text">
             </div>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-offset-3 col-lg-6" id="elementos">
+            <div class="col-lg-12" id="elementos">
 
             </div>
         </div>
